# dark-city-engine

./: .gitignore  Cargo.toml  build.rs  index.html
pkg/: dark_city_engine.d.ts  dark_city_engine.js  dark_city_engine_bg.wasm  dark_city_engine_bg.wasm.d.ts  package.json
shaders/: basic.frag.wgsl  basic.vert.wgsl
src/: asset.rs  camera.rs  ecs.rs  input.rs  lib.rs  main.rs  renderer.rs  shader.rs
