[package]
name = "dark_city_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_ecs = "0.14"
wgpu = "23.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document", "Element", "Response", "KeyboardEvent", "MouseEvent"] }
js-sys = "0.3"
web-time = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s" # Optimize for size

